tests/baselines/reference/parserTypeQuery7.errors.txt
parserTypeQuery7.ts(1,15): error TS2304: Cannot find name 'A'.


==== parserTypeQuery7.ts (1 errors) ====
    var v: typeof A[]
                  ~
!!! error TS2304: Cannot find name 'A'.